crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E273_E27.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E27.py:11:9: E273 (tab-after-keyword) [*] Tab after keyword
   |
 9 |     pass
10 | #: E273
11 | True and        False
   |         ^^^^^^^^ E273 (tab-after-keyword)
12 | #: E273 E274
13 | True        and False
   |
   = help: Replace with single space

ℹ Safe fix
8  8  | if   1:
9  9  |     pass
10 10 | #: E273
11    |-True and		False
   11 |+True and False
12 12 | #: E273 E274
13 13 | True		and	False
14 14 | #: E271

E27.py:13:5: E273 (tab-after-keyword) [*] Tab after keyword
   |
11 | True and        False
12 | #: E273 E274
13 | True        and False
   |     ^^^^^^^^ E273 (tab-after-keyword)
14 | #: E271
15 | a and  b
   |
   = help: Replace with single space

ℹ Safe fix
10 10 | #: E273
11 11 | True and		False
12 12 | #: E273 E274
13    |-True		and	False
   13 |+True and	False
14 14 | #: E271
15 15 | a and  b
16 16 | #: E271

E27.py:13:10: E273 (tab-after-keyword) [*] Tab after keyword
   |
11 | True and        False
12 | #: E273 E274
13 | True        and False
   |                ^ E273 (tab-after-keyword)
14 | #: E271
15 | a and  b
   |
   = help: Replace with single space

ℹ Safe fix
10 10 | #: E273
11 11 | True and		False
12 12 | #: E273 E274
13    |-True		and	False
   13 |+True		and False
14 14 | #: E271
15 15 | a and  b
16 16 | #: E271

E27.py:27:6: E273 (tab-after-keyword) [*] Tab after keyword
   |
25 | this  and False
26 | #: E273
27 | a and   b
   |      ^^^ E273 (tab-after-keyword)
28 | #: E274
29 | a       and b
   |
   = help: Replace with single space

ℹ Safe fix
24 24 | #: E272
25 25 | this  and False
26 26 | #: E273
27    |-a and	b
   27 |+a and b
28 28 | #: E274
29 29 | a		and b
30 30 | #: E273 E274

E27.py:31:10: E273 (tab-after-keyword) [*] Tab after keyword
   |
29 | a       and b
30 | #: E273 E274
31 | this        and False
   |                ^ E273 (tab-after-keyword)
32 | #: Okay
33 | from u import (a, b)
   |
   = help: Replace with single space

ℹ Safe fix
28 28 | #: E274
29 29 | a		and b
30 30 | #: E273 E274
31    |-this		and	False
   31 |+this		and False
32 32 | #: Okay
33 33 | from u import (a, b)
34 34 | from v import c, d

E27.py:74:5: E273 (tab-after-keyword) [*] Tab after keyword
   |
73 | #: E273
74 | type    Number = int
   |     ^^^^ E273 (tab-after-keyword)
75 |
76 | #: E275
   |
   = help: Replace with single space

ℹ Safe fix
71 71 | type  Number = int
72 72 | 
73 73 | #: E273
74    |-type	Number = int
   74 |+type Number = int
75 75 | 
76 76 | #: E275
77 77 | match(foo):
