crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E302_E302_first_line_function.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E302_first_line_function.py:4:1: E302 (blank-lines-top-level) [*] Expected 2 blank lines, found 1
  |
2 |     pass
3 |
4 | def fn2():
  | ^^^ E302 (blank-lines-top-level)
5 |     pass
  |
  = help: Add missing blank line(s)

ℹ Safe fix
1 1 | def fn1():
2 2 |     pass
3 3 | 
  4 |+
4 5 | def fn2():
5 6 |     pass
