crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E303_E30.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E30.py:617:2: E303 (too-many-blank-lines) [*] Too many blank lines (2)
    |
617 |     def method2():
    |     ^^^ E303 (too-many-blank-lines)
618 |         return 22
619 | # end
    |
    = help: Remove extraneous blank line(s)

ℹ Safe fix
613 613 | 	def method1():
614 614 | 		return 1
615 615 | 
616     |-
617 616 | 	def method2():
618 617 | 		return 22
619 618 | # end

E30.py:644:5: E303 (too-many-blank-lines) [*] Too many blank lines (2)
    |
644 |     # arbitrary comment
    |     ^^^^^^^^^^^^^^^^^^^ E303 (too-many-blank-lines)
645 |
646 |     def inner():  # E306 not expected (pycodestyle detects E306)
    |
    = help: Remove extraneous blank line(s)

ℹ Safe fix
640 640 | def fn():
641 641 |     _ = None
642 642 | 
643     |-
644 643 |     # arbitrary comment
645 644 | 
646 645 |     def inner():  # E306 not expected (pycodestyle detects E306)

E30.py:656:5: E303 (too-many-blank-lines) [*] Too many blank lines (2)
    |
656 |     # arbitrary comment
    |     ^^^^^^^^^^^^^^^^^^^ E303 (too-many-blank-lines)
657 |     def inner():  # E306 not expected (pycodestyle detects E306)
658 |         pass
    |
    = help: Remove extraneous blank line(s)

ℹ Safe fix
652 652 | def fn():
653 653 |     _ = None
654 654 | 
655     |-
656 655 |     # arbitrary comment
657 656 |     def inner():  # E306 not expected (pycodestyle detects E306)
658 657 |         pass

E30.py:667:1: E303 (too-many-blank-lines) [*] Too many blank lines (3)
    |
667 | print()
    | ^^^^^ E303 (too-many-blank-lines)
668 | # end
    |
    = help: Remove extraneous blank line(s)

ℹ Safe fix
663 663 | print()
664 664 | 
665 665 | 
666     |-
667 666 | print()
668 667 | # end
669 668 | 

E30.py:676:1: E303 (too-many-blank-lines) [*] Too many blank lines (3)
    |
676 | # comment
    | ^^^^^^^^^ E303 (too-many-blank-lines)
677 |
678 | print()
    |
    = help: Remove extraneous blank line(s)

ℹ Safe fix
672 672 | print()
673 673 | 
674 674 | 
675     |-
676 675 | # comment
677 676 | 
678 677 | print()

E30.py:687:5: E303 (too-many-blank-lines) [*] Too many blank lines (2)
    |
687 |     # comment
    |     ^^^^^^^^^ E303 (too-many-blank-lines)
    |
    = help: Remove extraneous blank line(s)

ℹ Safe fix
683 683 | def a():
684 684 |     print()
685 685 | 
686     |-
687 686 |     # comment
688 687 | 
689 688 | 

E30.py:690:5: E303 (too-many-blank-lines) [*] Too many blank lines (2)
    |
690 |     # another comment
    |     ^^^^^^^^^^^^^^^^^ E303 (too-many-blank-lines)
691 |
692 |     print()
    |
    = help: Remove extraneous blank line(s)

ℹ Safe fix
686 686 | 
687 687 |     # comment
688 688 | 
689     |-
690 689 |     # another comment
691 690 | 
692 691 |     print()

E30.py:701:1: E303 (too-many-blank-lines) [*] Too many blank lines (3)
    |
701 | / """This class docstring comes on line 5.
702 | | It gives error E303: too many blank lines (3)
703 | | """
    | |___^ E303 (too-many-blank-lines)
704 |   # end
    |
    = help: Remove extraneous blank line(s)

ℹ Safe fix
697 697 | #!python
698 698 | 
699 699 | 
700     |-
701 700 | """This class docstring comes on line 5.
702 701 | It gives error E303: too many blank lines (3)
703 702 | """

E30.py:713:5: E303 (too-many-blank-lines) [*] Too many blank lines (2)
    |
713 |     def b(self):
    |     ^^^ E303 (too-many-blank-lines)
714 |         pass
715 | # end
    |
    = help: Remove extraneous blank line(s)

ℹ Safe fix
709 709 |     def a(self):
710 710 |         pass
711 711 | 
712     |-
713 712 |     def b(self):
714 713 |         pass
715 714 | # end

E30.py:723:5: E303 (too-many-blank-lines) [*] Too many blank lines (2)
    |
723 |     a = 2
    |     ^ E303 (too-many-blank-lines)
724 | # end
    |
    = help: Remove extraneous blank line(s)

ℹ Safe fix
719 719 | if True:
720 720 |     a = 1
721 721 | 
722     |-
723 722 |     a = 2
724 723 | # end
725 724 | 

E30.py:731:5: E303 (too-many-blank-lines) [*] Too many blank lines (2)
    |
731 |     # comment
    |     ^^^^^^^^^ E303 (too-many-blank-lines)
    |
    = help: Remove extraneous blank line(s)

ℹ Safe fix
727 727 | # E303
728 728 | class Test:
729 729 | 
730     |-
731 730 |     # comment
732 731 | 
733 732 | 

E30.py:734:5: E303 (too-many-blank-lines) [*] Too many blank lines (2)
    |
734 |     # another comment
    |     ^^^^^^^^^^^^^^^^^ E303 (too-many-blank-lines)
735 |
736 |     def test(self): pass
    |
    = help: Remove extraneous blank line(s)

ℹ Safe fix
730 730 | 
731 731 |     # comment
732 732 | 
733     |-
734 733 |     # another comment
735 734 | 
736 735 |     def test(self): pass

E30.py:748:5: E303 (too-many-blank-lines) [*] Too many blank lines (2)
    |
748 |     def b(self):
    |     ^^^ E303 (too-many-blank-lines)
749 |         pass
750 | # end
    |
    = help: Remove extraneous blank line(s)

ℹ Safe fix
744 744 | 
745 745 | # wrongly indented comment
746 746 | 
747     |-
748 747 |     def b(self):
749 748 |         pass
750 749 | # end

E30.py:758:5: E303 (too-many-blank-lines) [*] Too many blank lines (2)
    |
758 |     pass
    |     ^^^^ E303 (too-many-blank-lines)
759 | # end
    |
    = help: Remove extraneous blank line(s)

ℹ Safe fix
754 754 | def fn():
755 755 |     pass
756 756 | 
757     |-
758 757 |     pass
759 758 | # end
760 759 |
